@@ -1,7 +1,9 @@
 AUX smplayer-0.6.8-quit.patch 560 RMD160 cb43ba1933b977b4fecb19dd41bac00aca382228 SHA1 5ea1eeab99d4831ba27487ce9b317d8d44466a00 SHA256 212c50738dcfcf2ee218a7ff690faa2efc8cddc79c9936a01f79adcc1849e76c
 AUX smplayer2-system-quazip.patch 2600 RMD160 2057953aa5caa7c63af8513c4dc85a949b561861 SHA1 0629c57d74e553e307badbc8f338d9b7c9956d65 SHA256 39bc0f96e071b24ab3cdc9ab9ba92fbf1a43c8470a98c42e97b04a32e720a22b
 DIST smplayer2-0.7.0_pre20111022.tar.xz 1204408 RMD160 e578d9c785d21b4fc86ce55f5d6b4ef8fe905794 SHA1 4365b16f74da6fb9367d2d32cd43e814fcf45260 SHA256 161b3cebdfa8dfd7ff39c3a6b1e8acd02c5819ba4447d8861f545013131c7605
+DIST smplayer2-0.7.0_pre20111110.tar.xz 1165708 RMD160 fdf5f89f91f14e284401cebd94571037b5005630 SHA1 9af1056a949e358e61d3501518f1ecca2de76504 SHA256 0c0814b6a05092babba6cfd1f9a9d0914914a806494988fcb01d863fbf014c8a
 EBUILD smplayer2-0.7.0_pre20111022.ebuild 2048 RMD160 aa1525bbd3b06d3377cb9f09d6072df89f35cefb SHA1 67ff8c948e27295f95fb9a06970e5cd99c070ad8 SHA256 dc44e6cc1f94aa113a02a16e1eb740a2ef48994a88f269b8645ecf1e285bb59e
-EBUILD smplayer2-9999.ebuild 1817 RMD160 123f5450defc85fa969bdec1b04358a501617d5c SHA1 16cdd71f17234eccd40413ee82728e9776fbc0c2 SHA256 47b079748e4d6bfb56a32839c1740b41135a22b75d8c0a999224c0124ff75ea0
-MISC ChangeLog 531 RMD160 32306f77051e77266f7dde994f08655ec41ff6ff SHA1 5096790143f52d40924339d3334f941e7a03176d SHA256 eb920e6ffe801540d90ed574da776b4c088574df2ebc5a76dc3b19a3accb588c
-MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
+EBUILD smplayer2-0.7.0_pre20111110.ebuild 1162 RMD160 7b4a20c88fae16fe5227c922a840aee9228df6d9 SHA1 d43261fa7a9f8f750565cd26d3f1fa26fa17574e SHA256 3c80dca6255f38b4ae45ea314cdee1de6b623ed79c13b0a4e0496c26d2352490
+EBUILD smplayer2-9999.ebuild 1138 RMD160 b57c782ba2e3090d9c827ededa2bb1073f2a9ffa SHA1 00d1a3eb8fe815a4d42206271e10ea334d65e375 SHA256 0703ee7b06f009e8b4c1f50b341784207c8f852aedbf0a29371b9058ccdef97b
+MISC ChangeLog 728 RMD160 892662df8bd83677881b7579e35c700f87bce7f6 SHA1 439bb203d58431c5433bc4d82825022ff8c55942 SHA256 8164b26a435057479506e466a24b8e01a1c2cec5e6296ca05963e7e1dd0d2251
+MISC metadata.xml 344 RMD160 2cedaa794d23ab4849ce62fe63be1fdbfbdc4e67 SHA1 a9cb60e1bb8041c97563d8e976f6693202ebeb3c SHA256 6599f98da1a533c019d1cf3eb8a3f23f65a4054a9fc8fa0d45d8e71fd1898d47
