@@ -6,4 +6,7 @@
 		<email>nikoli@lavabit.com</email>
 		<name>Nikoli</name>
 	</maintainer>
+	<use>
+		<flag name="download-subs">Enable subtitle downloader (requires QuaZip)</flag>
+	</use>
 </pkgmetadata>
